[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/base/MicrogameStandard.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/00_04_wario.png" type="Texture" id=2]
[ext_resource path="res://scenes/microgames/tutorial/entities/00_04_WhirledArc.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/00_04_circle_background.png" type="Texture" id=4]
[ext_resource path="res://scenes/microgames/tutorial/Microgame_00_04.gd" type="Script" id=5]
[ext_resource path="res://scenes/microgames/tutorial/entities/00_04_WhirlStopper.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/util/AudioSpeedController.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/music/microgame_00_04.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/sfx/chirp.mp3" type="AudioStream" id=9]

[node name="Microgame_00_04" instance=ExtResource( 1 )]
script = ExtResource( 5 )
time = 3.5

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( -34, 0 )
texture = ExtResource( 4 )

[node name="WhirlStopper" parent="." index="3" instance=ExtResource( 6 )]
position = Vector2( 63, 0 )
extend_amt = 20.0

[node name="WarioContainer" type="Node2D" parent="." index="4"]
position = Vector2( -34, 0 )

[node name="WhirledArc" parent="WarioContainer" index="0" instance=ExtResource( 3 )]
radius = 50.0

[node name="Wario" type="Sprite" parent="WarioContainer" index="1"]
position = Vector2( 28, 1 )
texture = ExtResource( 2 )

[node name="BGM" parent="." index="5" instance=ExtResource( 7 )]
stream = ExtResource( 8 )
bus = "Microgame-Soundtrack"

[node name="WarioFail" parent="." index="6" instance=ExtResource( 7 )]
stream = ExtResource( 9 )
bus = "Microgame-SFX"
